--- a/src/app/folder/folder.page.scss
+++ b/src/app/folder/folder.page.scss
@@ -3,12 +3,17 @@ ion-menu-button {
 }
 
 #container {
+  overflow-y: hidden;
   text-align: center;
   position: absolute;
   left: 0;
   right: 0;
   top: 50%;
   transform: translateY(-50%);
+  background-image: url("https://wallpaperaccess.com/full/24963.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100%;
 }
 
 #container strong {
@@ -26,3 +31,44 @@ ion-menu-button {
 #container a {
   text-decoration: none;
 }
+
+.app-description {
+color: white;
+}
+/* Estilos para la sección "siempre arriba" */
+.top-section {
+  margin-top: 40px;
+  padding: 20px;
+  background-color: #1d1d1d;
+  border-bottom: 1px solid black;
+}
+
+/* Estilos para la sección "siempre abajo" */
+.bottom-section {
+  padding: 20px;
+  background-color: #1d1d1d;
+  border-top: 1px solid balck;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
+
+.app-description {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%; /* Asegura que ocupe toda la altura del contenido */
+  padding: 20px; /* Añade espacio alrededor del contenido */
+}
+
+.app-description h2,
+.app-description h4 {
+  margin: 4px 0; /* Agrega margen alrededor de los títulos */
+}
+
+.pokeverse-title {
+  color: #ffde00;
+  text-shadow: -2px -2px 0 #00539f, 2px -2px 0 #00539f, -2px 2px 0 #00539f, 2px 2px 0 #00539f;
+}
+
