--- a/src/app/pokemon-profile/pokemon-profile.page.scss
+++ b/src/app/pokemon-profile/pokemon-profile.page.scss
@@ -142,16 +142,18 @@
 }
 
 .card-slider{
-  width: 40%;
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 80%;
  }
-
 
 .card-equal-height {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   height: 80%;
+
 
   transform: rotateY(0deg) rotateX(5deg) translateX(0%) translateZ(0px);
   animation-name: example;
@@ -162,4 +164,9 @@
   50% { transform: rotateY(0deg) rotateX(5deg) translateX(0%) translateZ(50px); }
   90% { transform: rotateY(0deg) rotateX(5deg) translateX(0%) translateZ(10px); }
   100% { transform: rotateY(0deg) rotateX(0deg) translateX(0%) translateZ(5px); }
+}
+.polar-grap{
+  height: 450px;
+  padding-inline: 20px;
+  margin: 0 auto;
 }
