--- a/src/app/pokemon/pokemon.page.html
+++ b/src/app/pokemon/pokemon.page.html
@@ -4,7 +4,7 @@
       <ion-buttons slot="start">
         <ion-menu-button></ion-menu-button>
       </ion-buttons>
-      <ion-title> <h6>Pokedex</h6> </ion-title>
+      <h6>Pokedex</h6>
       <ion-toggle
         slot="end"
         mode="md"
