--- a/src/app/pokemon-search/pokemon-search.page.html
+++ b/src/app/pokemon-search/pokemon-search.page.html
@@ -35,9 +35,33 @@
           >
             <div class="pokemonSpirte" style="display: flex; justify-content: center;">
               <ion-avatar [routerLink]="['/pokemon-profile/' + poke.id]">
-                <img [src]="poke.sprites?.front_default" />
+                <img
+                 *ngIf="poke.sprites?.front_default; else condition1ElseBlock"
+                [src]="poke.sprites?.front_default"
+                [alt]="poke.name"
+                />
               </ion-avatar>
             </div>
+
+            <ng-template #condition1ElseBlock>
+              <div *ngIf="poke.sprites?.other?.['official-artwork']?.front_default; else condition2ElseBlock">
+                <div style="display: flex; justify-content: center;">
+                  <img style="height: 90px; width: 90px;" [routerLink]="['/pokemon-profile/' + poke.id]"
+                    [src]="poke.sprites?.other?.['official-artwork']?.front_default"
+                    alt="Imagen por defecto"
+                  />
+                </div>
+              </div>
+              <ng-template #condition2ElseBlock>
+                <div style="display: flex; justify-content: center;">
+                  <img style="height: 90px; width: 90px;" [routerLink]="['/pokemon-profile/' + poke.id]"
+                    src="../../assets/img/spriteNull.png"
+                    alt="Imagen por defecto"
+                  />
+                </div>
+              </ng-template>
+            </ng-template>
+
             <ion-card-header>
               <ion-card-title class="ion-text-center"
                 >{{poke.name}}</ion-card-title
